--- a/Dia 7/index.html
+++ b/Dia 7/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SWAPI</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <h1>Informacion del personaje</h1>
+    <label for="heroID">Ingresa el número</label>
+    <input type="text" id="persona" placeholder="Ingresa el ID" class="Info">
+    <button onclick="fetchSuperHero()" class="">Buscar</button>
+    <div id="SuperHeroInfo">
+        
+    </div>
 </body>
+<script src="./script.js"></script>
 </html>
