--- a/Dia 9/index.html
+++ b/Dia 9/index.html
@@ -7,6 +7,18 @@
 </head>
 <body>
     <h1>StarWars API</h1>
+    <div class="container text-center">
+        <h1 class="titulo">STAR WARS</h1>
+
+        <form id="apiForm">
+            <div class="form-group">
+                <input type="number" min="1" max="88" class="form-control"  id="idInput" value="1">
+            </div>
+            <button type="submit" class="btn btn-dark">Buscar</button>
+        </form>
+        <div id="result" class="mt-3" style="color: rgb(255, 255, 255) ; top: 45vi; left: 15vi;"></div>  
+    </div>
+</div>
 </body>
 <script src="./script.js"></script>
 </html>
