--- a/Dia 11/index.html
+++ b/Dia 11/index.html
@@ -3,23 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PokeAPI</title>
+    <title>POKEAPI</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-        <div id = "imagen">
-        <img src="./Imagen/pokedex.png" alt="">
+    <div class="container center-text">
+        <img src="./Imagen/pokedex.png" alt="" class="imagen1">
+        <input type="text" id="pokemonInput" class="input1" placeholder="Number or Name">
+        <div id="pokemonid" class="name"></div>
+        <img id="pokemonImage" src="" class="gif">
+        <button class="clear-input-btn" id="clearBtn">&#10006;</button>
+        <button class="button1" id="prevBtn">Prev ></button>
+        <button class="button2" id="nextBtn">Next <</button>
+        
     </div>
-    <form id="apiForm">
-        <div class="form-group">
-            <input type="number" min="1" max="132" class="form-control"  id="idInput" value="1">
-        </div>
-        <button type="submit" class="btn btn-dark">Prev <</button>
-        <button type="submit" class="btn btn-dark">Next ></button>
-    </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-<SCript src="./script.js"></SCript>
+<script src="./js/script.js"></script>
 </html>
