--- a/Dia 11/index.html
+++ b/Dia 11/index.html
@@ -13,12 +13,11 @@
         <input type="text" id="pokemonInput" class="input1" placeholder="Number or Name">
         <div id="pokemonid" class="name"></div>
         <img id="pokemonImage" src="" class="gif">
-        <button class="clear-input-btn" id="clearBtn">&#10006;</button>
         <button class="button1" id="prevBtn">Prev ></button>
         <button class="button2" id="nextBtn">Next <</button>
         
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-<script src="./js/script.js"></script>
+<script src="./script.js"></script>
 </html>
