feat: :construction: Juego cartas
Implementación de juego de cartas, blackjack.

--- a/Dia 12/index.html
+++ b/Dia 12/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="./Style.css">
 </head>
 <body>
+    <center><h1>Blackjack</h1></center>
     <div id="botones">
-        <input type="button" value="Pedir Carta" id="pedir" class="button" >
-        <input type="button" value="Jugar otra vez!" id="reset"  >
-        <input type="button" value="Plantarme" id="plantar" class="button" >
+        <input type="button" value="Pedir Carta" id="pedir" class="button">
+        <input type="button" value="Jugar otra vez" id="reset" class="button">
+        <input type="button" value="Plantarme" id="plantar" class="button">
     </div>
 </body>
 <script src="./script.js"></script>
