feat: :construction: Blackjack
Juego de cartas blackjack borradores y pruebas

--- a/Dia 12/index.html
+++ b/Dia 12/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <center><h1>Blackjack</h1></center>
-    <div id="botones">
-        <input type="button" value="Pedir Carta" id="pedir" class="button">
-        <input type="button" value="Jugar otra vez" id="reset" class="button">
-        <input type="button" value="Plantarme" id="plantar" class="button">
-    </div>
+    <div class="mensaje">
+    <h2>Perdiste</h2>
+    <button class="volvera-jugar">Volver a jugar</button>
+  </div>
+<main>
+  <button class="pedir">Pedir carta</button>
+  <button class="plantar">Plantarse</button>
+  <div class="cartas"></div>
+</main>
 </body>
 <script src="./script.js"></script>
 </html>
