feat: :construction: Blackjack
Juego de blackjack

--- a/Dia 12/index.html
+++ b/Dia 12/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <center><h1>Blackjack</h1></center>
-    <div class="mensaje">
+    <div class="message">
     <h2>Perdiste</h2>
-    <button class="volvera-jugar">Volver a jugar</button>
+    <button class="volvera-jugar" >Volver a jugar</button>
   </div>
 <main>
-  <button class="pedir">Pedir carta</button>
+  <button class="pedir" id="pedirCarta">Pedir carta</button>
   <button class="plantar">Plantarse</button>
-  <div class="cartas"></div>
+  <div class="cards"></div>
 </main>
 </body>
 <script src="./script.js"></script>
